# par4all

./: .gitignore  CNAME  Download  Download.html  HISTORY.txt  Home.md  INSTALL  LICENSE.txt  Make-lang.in  Makefile  Makefile.am  README  README.rst  README.txt  RELEASE-NOTES-Archives.txt  RELEASE-NOTES.rst  RELEASE-NOTES.txt  TODO  VERSION  autogen.sh  benchmarks.html  build_root.mk  changelog  community.html  conf.py  configure  configure.ac  configure.in  default_functions.mk  defaults  documentation.html  download.html  download.rst  dump-parse-tree.c  dump2PIPS.c  dump2PIPS.h  error.c  f95-lang.c  features.html  functions_default.mk  (+72 more)
Test/ehrhart/: Makefile.am  Makefile~  empty.out  makefile
Test/ehrhart_union/: Makefile.am  Makefile~  makefile  makefile~  ue1.in  ue2.in  ue2.out
Test/general/: Makefile  Makefile.am  Makefile~  convex.test  makefile  test.out
Test/pp/: Makefile  Makefile.am  Makefile~  c5.in  c5.out  makefile  salvatore.out
Test/ranking/: Makefile.am  asci03-core.out
src/Documentation/newgen/: Makefile  Makefile.am  abc_private.tex  alias_private.tex  c_parser_private.tex  cloning.tex  complexity_ri.ftex  complexity_ri.tex  compsec.tex  config.makefile  database.ftex  database.tex  dcdg.tex  dg.tex  effects.tex  eole_private.tex  freia_spoc_private.tex  graph.ftex  graph.tex  hpf.ftex  hpf.tex  hpf_private.ftex  hpf_private.tex  interval_graph.tex  kernel_memory_mapping.tex  makefile.ftex  makefile.tex  message.ftex  message.tex  newgen_domain.sty  optimizer.tex  paf_ri.ftex  paf_ri.tex  parser_private.ftex  parser_private.tex  pipsdbm_private.tex  points_to_private.tex  property.ftex  property.tex  reduction.ftex  (+16 more)
src/Libs/: Makefile  Makefile.am  TODO  deps.mk  local.mk  pipslibs_includes.mk
src/Libs/.static_controlize/: static_controlize-local.h
src/Libs/accel-util/: Makefile  Makefile.am  accel-util-local.h  array_to_pointer.c  computation_intensity.c  constraints.c  delay.c  gpu_promote_sequential.c  group_constants.c  ikernels.c  inlining.c  isolate_statement.c  kernels.c  loop_expansion.c  outlining.c  psolve  statement_insertion.c  terapixify.c
src/Libs/alias-classes/: Makefile  Makefile.am  README  TODO  abstract_location.c  alias-classes-local.h  alias_classes.c  alias_lists.c  alias_pairs.c  anywhere_abstract_locations.c  assignment.c  config.makefile  conflicts.c  constant-path-utils.c  dereferencing.c  eval.c  expression.c  interprocedural.c  passes.c  points_to_analysis.c  points_to_analysis_general_algorithm.c  points_to_init_analysis.c  points_to_interprocedural_analysis.c  points_to_prettyprint.c  points_to_set.c  prettyprint.c  sav_alias_classes.c  sav_alias_lists.c  sinks.c  statement.c  variable.c
src/Libs/array_dfg/: Makefile  adg_graph.c  adg_predicate.c  adg_prettyprint.c  adg_summary.c  adg_utils.c  array_dfg-local.h  array_dfg.c  config.makefile  local.h
src/Libs/atomizer/: Makefile  Makefile.am  atomizer-local.h  atomizer.c  codegen.c  config.makefile  control.c  defs_elim.c  local.h  new_atomizer.c  norm_exp.c  utils.c  variables.c
src/Libs/bootstrap/: Makefile  Makefile.am  bootstrap-local.h  bootstrap.c  config.makefile
src/Libs/bouchebaba/: Makefile  stats.c  tiling_sequence.c
src/Libs/c_syntax/: Makefile  Makefile.am  c_parser.c  c_syntax-local.h  clex.l  config.makefile  cyacc.y  return.c  statement.c  util.c
src/Libs/callgraph/: Makefile  Makefile.am  callgraph-local.h  callgraph.c  config.makefile  graph.c  print.c
src/Libs/chains/: Makefile  Makefile.am  chains-local.h  chains.c  config.makefile
src/Libs/comp_sections/: Makefile  Makefile.am  all.h  comp_sections-local.h  comp_sections.c  config.makefile  dbase.c  myintrinsics.c  operators.c  prettyprint.c  propagate.c  propagate.h  ss.c  ss.h
src/Libs/complexity/: Makefile  Makefile.am  block_algo.c  comp_expr_to_pnome.c  comp_math.c  comp_matrice.c  comp_prettyprint.c  comp_scan.c  comp_unstr.c  comp_util.c  complexity-local.h  config.makefile  newblockalgo.c  polynome_ri.c  test_matrice.c
src/Libs/continuation/: Makefile  Makefile.am  config.makefile  continuation.c  prettyprint.c
src/Libs/control/: Makefile  Makefile.am  bourdoncle.c  cfg.c  clean_up_sequences.c  config.makefile  control-local.h  control.c  controlizer.c  (+9 more)
src/Runtimes/: Makefile.am  local.mk
src/arithmetique/: Makefile  Makefile.am  abs.c  arith_fixprec.h  arith_mulprec.h  arithmetic_errors.h  arithmetique-local.h  assert.h  boolean.h  config.makefile  divide.c  errors.c  exp.c  io.c  linear.h  modulo.c  pgcd.c  ppcm.c  value.c
src/genC/: Makefile  Makefile.am  TODO  array.c  build.c  genC.c  genC.h  genClib.c  genLisp.c  genSML.c  gram.y  hash.c  list.c  new.c  newgen_array.h  newgen_assert.h  newgen_generic_function.h  newgen_generic_mapping.h  newgen_generic_stack.h  newgen_hash.h  newgen_include.h  newgen_list.h  newgen_map.h  newgen_set.h  newgen_stack.h  newgen_string_buffer.h  newgen_types.h  read.l  read.y  read_token.l  set.c  stack.c  standard_defines.mk  string.c  string_buffer.c  tabulated.c  token.l
src/polyedre/: Makefile  Makefile.am  affect.c  chernikova.c  chernikova.h  chernikova_fixprec.c  chernikova_mulprec.c  config.makefile  elim_red.c  env.c  grammar.y  incl_p_h.c  inter_demi.c  inter_hyp.c  inter_poly.c  liste-table.h  poly.c  polyedre-local.h  saturation.c  saturation.h  sc_enumerate.c  sc_enveloppe.c  sc_to_sg.c  syst_convert.c
src/sc/: Makefile  Makefile.am  config.makefile  sc-local.h  sc-private.h  sc.c  sc_alloc.c  sc_build_sc_nredund.c  sc_debug.c  sc_elim_eq.c  sc_elim_redund.c  sc_elim_simple_redund.c  sc_error.c  sc_eval.c  sc_feasibility.c  sc_gram.y  sc_insert_eq.c  sc_integer_analyze.c  sc_integer_projection.c  sc_intersection.c  sc_io.c  sc_janus_feasibility.c  sc_lex.l  sc_new_loop_bound.c  sc_normalize.c  sc_oppose.c  sc_projection.c  sc_read.c  sc_simplex_feasibility.c  sc_simplex_feasibility.h  sc_simplex_feasibility_mulprec.c  sc_simplexe_feasibility.c  sc_transformation.c  sc_triang_elim_redond.c  sc_unaires.c  sc_var.c
src/sparse_sc/: Makefile  Makefile.am  config.makefile  sparse_sc-local.h  sys_matrice_conv.c
(+16129 files in other folders)
